--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "css-loader": "^0.23.1",
     "function-bind": "^1.1.0",
     "isparta-loader": "^2.0.0",
+    "karma": "^1.4.0",
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
@@ -55,12 +56,13 @@
     "sass-loader": "^3.2.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
+    "sourcemap": "^0.1.0",
     "style-loader": "^0.13.1",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "7.1.7",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.12.0",
     "webpack-merge": "^0.13.0"
   },
